home/unifi/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: unifi
spec:
  serviceName: unifi
  selector:
    matchLabels:
      name: unifi
  template:
    metadata:
      labels:
        name: unifi
    spec:
      containers:
        - name: unifi
          ports:
            - containerPort: 8443
              name: ubnt-8443
              protocol: TCP
            - containerPort: 3478
              name: ubnt-3478
              protocol: UDP
            - containerPort: 10001
              name: ubnt-10001
              protocol: UDP
            - containerPort: 8080
              name: ubnt-8080
              protocol: TCP
            - containerPort: 1900
              name: ubnt-1900
              protocol: UDP
            - containerPort: 8843
              name: ubnt-8843
              protocol: TCP
            - containerPort: 8880
              name: ubnt-8880
              protocol: TCP
            - containerPort: 6789
              name: ubnt-6789
              protocol: TCP
            - containerPort: 5514
              name: ubnt-5514
              protocol: UDP
          image: lscr.io/linuxserver/unifi-controller@sha256:f65a65e4306c5670f35e6734680a4f574f71df99477544e1059ad840a6ebcb23
          volumeMounts:
            - mountPath: /config
              name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-storage
      resources:
        requests:
          storage: 1Gi
