home/unifi/service-tcp.yaml
kind: Service
apiVersion: v1
metadata:
  name: unifi-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.254
  selector:
    name: unifi
  ports:
  - port: 8843
    targetPort: 8843
    name: https-redirect
    protocol: TCP
  - port: 8880
    targetPort: 8880
    name: http-redirect
    protocol: TCP
  - port: 6789
    targetPort: 6789
    name: throughput-measurement
    protocol: TCP
  - port: 8080
    targetPort: 8080
    name: uap-inform
    protocol: TCP
