home/unifi/service-udp.yaml
kind: Service
apiVersion: v1
metadata:
  name: unifi-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.254
  selector:
    name: unifi
  ports:
  - port: 3478
    targetPort: 3478
    name: stun-port
    protocol: UDP
  - port: 10001
    targetPort: 10001
    name: ap-discovery
    protocol: UDP
  - port: 1900
    targetPort: 1900
    name: ubnt-1900
    protocol: UDP
  - port: 5514
    targetPort: 5514
    name: ubnt-5514
    protocol: UDP
