home/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    name: unifi
