home/unifi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-lan
  rules:
  - host: dummy.local
    http:
      paths:
      - backend:
          service:
            name: unifi
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dummy.local
